--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,38 @@
+# Backend Dockerfile - FastAPI + Python 3.11
+FROM python:3.11-slim as builder
+
+WORKDIR /app
+
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy and install dependencies
+COPY pyproject.toml ./
+RUN pip install --no-cache-dir -e .
+
+# Production stage
 FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN pip install --no-cache-dir hatch
+# Copy installed packages from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
-COPY pyproject.toml ./
-RUN pip install --no-cache-dir -e .
-
+# Copy application code
 COPY src/ ./src/
 
+# Add src to Python path
 ENV PYTHONPATH=/app/src
+
+# Expose port
 EXPOSE 8000
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
+
+# Run with uvicorn
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
-
