--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "agentcore-langchain-backend"
+name = "agentcore-poc-backend"
 version = "0.1.0"
-description = "AI Agent Backend - Clean Architecture"
-readme = "README.md"
+description = "AI Agent Backend - Clean Architecture + CQRS"
+readme = "../README.md"
 requires-python = ">=3.11"
 
 dependencies = [
@@ -12,7 +12,7 @@ dependencies = [
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
     
-    # AWS (共通インフラのみ)
+    # AWS SDK (共通インフラのみ)
     "boto3>=1.35.0",
     "aioboto3>=13.0.0",
     
@@ -27,33 +27,9 @@ dependencies = [
     "ulid-py>=1.1.0",
 ]
 
-# AI Framework依存はpoc配下で管理
-# - poc/strands-agents → strands-agents
-# - poc/langchain → langchain, langgraph
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.3.0",
-    "pytest-asyncio>=0.24.0",
-    "pytest-cov>=6.0.0",
-    "httpx>=0.28.0",
-    "ruff>=0.8.0",
-    "mypy>=1.13.0",
-]
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.ruff]
-target-version = "py311"
-line-length = 100
-src = ["src"]
-
-[tool.ruff.lint]
-select = ["E", "W", "F", "I", "B", "C4", "UP"]
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-testpaths = ["tests"]
-pythonpath = ["src"]
+[tool.hatch.build.targets.wheel]
+packages = ["src/domain", "src/application", "src/infrastructure", "src/api"]
