--- a/poc/strands-agents/pyproject.toml
+++ b/poc/strands-agents/pyproject.toml
@@ -5,19 +5,19 @@ description = "AWS Bedrock AgentCore (Strands Agents) PoC"
 requires-python = ">=3.11"
 
 dependencies = [
-    # Strands Agents (AgentCore)
-    "strands-agents>=0.1.0",
+    # Strands Agents (AgentCore Python SDK)
+    "strands-agents>=1.20.0",
     
-    # backend参照 (editable install)
-    # pip install -e ../../backend
+    # Backend (workspace内依存)
+    "agentcore-poc-backend",
 ]
-
-[project.optional-dependencies]
-dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.pytest.ini_options]
-pythonpath = ["src", "../../backend/src"]
+[tool.hatch.build.targets.wheel]
+packages = ["strands_poc"]
+
+[tool.uv.sources]
+agentcore-poc-backend = { workspace = true }
