--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.2",
     "@tanstack/react-query": "^5.60.0",
+    "aws-amplify": "^6.15.9",
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "react": "^18.3.1",
