fix: Amplify Gen2 IAMポリシー修正とデプロイ準備
- backend.ts: PolicyStatementクラスを使用するよう修正
- package.json: @aws-amplify/backend-cli追加
- 検証レポート更新

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.19.0",
+    "@aws-amplify/backend-cli": "^1.8.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
