--- a/.github/workflows/deploy-agentcore-runtime.yml
+++ b/.github/workflows/deploy-agentcore-runtime.yml
@@ -118,6 +118,15 @@ jobs:
                   {
                       "Effect": "Allow",
                       "Action": [
+                          "ecr:GetAuthorizationToken",
+                          "ecr:BatchGetImage",
+                          "ecr:GetDownloadUrlForLayer"
+                      ],
+                      "Resource": "*"
+                  },
+                  {
+                      "Effect": "Allow",
+                      "Action": [
                           "logs:CreateLogGroup",
                           "logs:CreateLogStream",
                           "logs:PutLogEvents"
