--- a/frontend/amplify/package.json
+++ b/frontend/amplify/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
     "@aws-amplify/backend-cli": "^1.0.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.956.0",
+    "@types/aws-lambda": "^8.10.159",
     "typescript": "^5.0.0"
   }
 }
-
