--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.19.0",
     "@aws-amplify/backend-cli": "^1.8.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.693.0",
+    "@types/aws-lambda": "^8.10.159",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
